GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/Loyalty_Tier_History__c.object-meta.xml
<CustomObject>
    <label>Loyalty Tier History</label>
    <nameField>
        <displayFormat>LTH-{0000000000}</displayFormat>
        <label>Loyalty Tier History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Tier History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>