GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/fields/ChangeReasonType__c.field-meta.xml
<CustomField>
    <fullName>ChangeReasonType__c</fullName>
    <label>ChangeReasonType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>