GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/fields/Loyalty_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Member__c</fullName>
    <label>Loyalty Program Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Loyalty Tier History</relationshipLabel>
    <relationshipName>Loyalty_Tier_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>