GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/fields/New_Tier__c.field-meta.xml
<CustomField>
    <fullName>New_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Tier</label>
    <referenceTo>LoyaltyTier</referenceTo>
    <relationshipLabel>Loyalty Tier History</relationshipLabel>
    <relationshipName>Loyalty_Tier_History</relationshipName>
    <type>Lookup</type>
</CustomField>