GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/fields/Old_Tier__c.field-meta.xml
<CustomField>
    <fullName>Old_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Tier</label>
    <referenceTo>LoyaltyTier</referenceTo>
    <relationshipLabel>Loyalty Tier History (Old Tier)</relationshipLabel>
    <relationshipName>Loyalty_Tier_History1</relationshipName>
    <type>Lookup</type>
</CustomField>