GearsetPOC/force-app/main/default/objects/Loyalty_Tier_History__c/fields/TierChangeReason__c.field-meta.xml
<CustomField>
    <fullName>TierChangeReason__c</fullName>
    <label>Tier Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>